epserde/tests/fail/full_copy_unknown.stderr
error: `Q` is not a type parameter of `Unknown`
  --> tests/fail/full_copy_unknown.rs:13:21
   |
13 | #[epserde(full_copy(Q))]
   |                     ^
